fix: book-appointment-btn align

--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -117,9 +117,10 @@
 }
 .book-appointment-btn {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center !important;
+    align-items: center !important;
     margin-right: 60px;
+    height: 100%;
     .appointment-btn {
         background: $black;
         padding: 15px 20px;
